# Project_exchange_rate

./: README.md  pyproject.toml  readme.md
config/: settings.py
main/: admin.py  models.py  services.py  urls.py  views.py
main/management/commands/: ucr.py
main/migrations/: 0001_initial.py
